Adding In state and out of state tuition table

--- a/College_df_work.ipynb
+++ b/College_df_work.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4                 16088                   0.7706       22444         18995  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "4                 16088                   0.7706       22444         18995  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "[204 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "38            -0.016772  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,58 +675,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# college_df_sorted[\"Difference in tuition\"]=college_df_sorted[\"Out_of_state_tuition\"]-college_df_sorted[\"In_state_tuition\"]\n",
-    "\n",
-    "# college_df_sorted[\"Percent Difference Change\"]=college_df_sorted[\"Difference in tuition\"]/college_df_sorted[\"Out_of_state_tuition\"]\n",
-    "\n",
-    "\n",
-    "# college_df_sorted=college_df_sorted[['Year','College_names','College_state','In_state_tuition',\\\n",
-    "#                      'Out_of_state_tuition','Difference in tuition','Percent Difference Change'\\\n",
-    "#                     ,'Enrollment','Student Size','Admissions_rate_overall']]\n",
-    "\n",
-    "# college_df_sorted = college_df_sorted.rename(columns={'Year':'Year',\\\n",
-    "#                                             'College_names':'College_Names',\\\n",
-    "#                                             'College_state':'State',\\\n",
-    "#                                             'In_state_tuition':'In_State_Tuition',\\\n",
-    "#                                             'Out_of_state_tuition':'Out_of_State_Tuition',\\\n",
-    "#                                             'Difference in tuition':'Tuition_Difference',\\\n",
-    "#                                             'Percent Difference Change': '%_Difference',\\\n",
-    "#                                             'Student Size':'Student_Size',\\\n",
-    "#                                             'Admissions_rate_overall':\"Admission_%\"})\n",
-    "# college_df_sorted.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# avg_in_state = college_df_sorted.groupby(['College_Names']).mean()['In_State_Tuition'].rename(\"Avg_In_State_Tuition\") \n",
-    "# # avg_in_state.head(25)\n",
-    "# avg_in_state_year = college_df_sorted.groupby(['Year']).mean()['In_State_Tuition'].rename(\"Avg_In_State_Tuition_by_Year\")\n",
-    "# # avg_in_state_year.head(25)\n",
-    "# avg_out_of_state = college_df_sorted.groupby(['College_Names']).mean()['Out_of_State_Tuition'].rename(\"Avg_Out_of_State_Tuition\") \n",
-    "# # avg_out_of_state.head(25)\n",
-    "# avg_out_of_state_year = college_df_sorted.groupby(['Year']).mean()['Out_of_State_Tuition'].rename(\"Avg_Out_of_State_Tuition_by_Year\")\n",
-    "# # avg_in_state_year.head(25)\n",
-    "\n",
-    "# tuition_avgs_by_school = pd.DataFrame({\"Avg_In_State_Tuition\":avg_in_state,\n",
-    "#                                         \"Avg_Out_of_State_Tuition\": avg_out_of_state,})\n",
-    "\n",
-    "\n",
-    "\n",
-    "# tuition_avgs_by_school['Avg_In_State_Tuition'] = tuition_avgs_by_school['Avg_In_State_Tuition'].map('${:,.2f}'.format)\n",
-    "# tuition_avgs_by_school['Avg_Out_of_State_Tuition'] = tuition_avgs_by_school['Avg_Out_of_State_Tuition'].map('${:,.2f}'.format)\n",
-    "# tuition_avgs_by_school"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -735,7 +683,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In state vs Out of state scatterplot and regressions\n",
+    "tuition_df = college_df_sorted.loc[(college_df_sorted['Year'] > 2002)]\n",
+    "# tuition_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -759,72 +718,182 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>%_In_state_chng</th>\n",
-       "      <th>%_Out_of_state_chng</th>\n",
+       "      <th>Out_of_state_tuition</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>College_names</th>\n",
-       "      <th>Year</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Arizona State University-Tempe</th>\n",
-       "      <th>2002</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>Arizona State University-Tempe</th>\n",
+       "      <td>20765.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2003</th>\n",
-       "      <td>0.390716</td>\n",
-       "      <td>0.090950</td>\n",
+       "      <th>Oregon State University</th>\n",
+       "      <td>22381.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2004</th>\n",
-       "      <td>0.130459</td>\n",
-       "      <td>0.066364</td>\n",
+       "      <th>Stanford University</th>\n",
+       "      <td>40077.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005</th>\n",
-       "      <td>0.084154</td>\n",
-       "      <td>0.168434</td>\n",
+       "      <th>University of Arizona</th>\n",
+       "      <td>23982.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2006</th>\n",
-       "      <td>0.064004</td>\n",
-       "      <td>0.049818</td>\n",
+       "      <th>University of California-Berkeley</th>\n",
+       "      <td>32523.88</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     %_In_state_chng  %_Out_of_state_chng\n",
-       "College_names                  Year                                      \n",
-       "Arizona State University-Tempe 2002              NaN                  NaN\n",
-       "                               2003         0.390716             0.090950\n",
-       "                               2004         0.130459             0.066364\n",
-       "                               2005         0.084154             0.168434\n",
-       "                               2006         0.064004             0.049818"
+       "                                  Out_of_state_tuition\n",
+       "College_names                                         \n",
+       "Arizona State University-Tempe                20765.12\n",
+       "Oregon State University                       22381.62\n",
+       "Stanford University                           40077.31\n",
+       "University of Arizona                         23982.69\n",
+       "University of California-Berkeley             32523.88"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# In state vs Out of state scatterplot and regressions\n",
-    "tuition_df = college_df_sorted[['Year','College_names','%_In_state_chng','%_Out_of_state_chng']]\n",
-    "tuition_df = tuition_df.set_index('College_names')\n",
+    "# in_state_grouped = tuition_df.groupby([\"College_names\"])\n",
+    "# mean_school_tuition = tuition_df.groupby(['College_names']).mean()['%_In_state_chng']\n",
+    "# in_state_tuition_changes = pd.DataFrame ({'%_In_state_chng':mean_school_tuition\n",
+    "#                                })\n",
+    "# # in_state_tuition_changes.head()\n",
     "\n",
-    "tuition_school_group=tuition_df.groupby(['College_names','Year'])\n",
-    "tuition_avg_school = tuition_school_group.mean()\n",
+    "in_state_grouped = tuition_df.groupby([\"College_names\"])\n",
+    "mean_in_state_tuition = tuition_df.groupby(['College_names']).mean()['Out_of_state_tuition'].map('{:.2f}'.format)\n",
+    "avg_in_state_tuition = pd.DataFrame ({'Out_of_state_tuition':mean_in_state_tuition\n",
+    "                               })\n",
+    "avg_in_state_tuition.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'avg_out_of_state_tuition' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-53-97f74d066eaa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mmean_out_of_state_tuition\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtuition_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'College_names'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'In_state_tuition'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{:.2f}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m avg_out_of_state_tuition = pd.DataFrame ({'In_state_tuition':avg_out_of_state_tuition\n\u001b[0m\u001b[1;32m      9\u001b[0m                                })\n\u001b[1;32m     10\u001b[0m \u001b[0mavg_out_of_state_tuition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'avg_out_of_state_tuition' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# mean_school_tuition = tuition_df.groupby(['College_names']).mean()['%_Out_of_state_chng']\n",
+    "# out_of_state_tuition_changes = pd.DataFrame ({'%_Out_of_state_chng':mean_school_tuition\n",
+    "#                                })\n",
+    "# # out_of_state_tuition_changes.head()\n",
     "\n",
-    "tuition_avg_school.head()"
+    "mean_out_of_state_tuition = tuition_df.groupby(['College_names']).mean()['In_state_tuition'].map('{:.2f}'.format)\n",
+    "avg_out_of_state_tuition = pd.DataFrame ({'In_state_tuition':avg_out_of_state_tuition\n",
+    "                               })\n",
+    "avg_out_of_state_tuition.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>%_In_state_chng</th>\n",
+       "      <th>%_Out_of_state_chng</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>College_names</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Arizona State University-Tempe</th>\n",
+       "      <td>0.098119</td>\n",
+       "      <td>0.060846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Oregon State University</th>\n",
+       "      <td>0.066980</td>\n",
+       "      <td>0.046069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stanford University</th>\n",
+       "      <td>0.040576</td>\n",
+       "      <td>0.040576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>University of Arizona</th>\n",
+       "      <td>0.107470</td>\n",
+       "      <td>0.077900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>University of California-Berkeley</th>\n",
+       "      <td>0.084007</td>\n",
+       "      <td>0.063194</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   %_In_state_chng  %_Out_of_state_chng\n",
+       "College_names                                                          \n",
+       "Arizona State University-Tempe            0.098119             0.060846\n",
+       "Oregon State University                   0.066980             0.046069\n",
+       "Stanford University                       0.040576             0.040576\n",
+       "University of Arizona                     0.107470             0.077900\n",
+       "University of California-Berkeley         0.084007             0.063194"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine the data into a single dataset\n",
+    "school_tuition_df=pd.merge(in_state_tuition_changes,out_of_state_tuition_changes,how = 'inner',on='College_names')\n",
+    "# Display the data table for preview\n",
+    "school_tuition_df.head()"
    ]
   },
   {
