Outputs to push to master

--- a/csv_clean.ipynb
+++ b/csv_clean.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import dependancies\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import requests\n",
+    "import time\n",
+    "import json\n",
+    "from scipy.stats import linregress"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -206,166 +223,16 @@
        "[204 rows x 8 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# import dependancies\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import requests\n",
-    "import time\n",
-    "import json\n",
-    "from scipy.stats import linregress\n",
-    "college_df = pd.read_csv(\"college_data .csv\", encoding=\"utf-8\")\n",
-    "college_df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>In_state_tuition</th>\n",
-       "      <th>Out_of_state_tuition</th>\n",
-       "      <th>Admissions_rate_overall</th>\n",
-       "      <th>Enrollment</th>\n",
-       "      <th>Student Size</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>204.000000</td>\n",
-       "      <td>204.000000</td>\n",
-       "      <td>204.000000</td>\n",
-       "      <td>204.000000</td>\n",
-       "      <td>204.000000</td>\n",
-       "      <td>204.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>2010.000000</td>\n",
-       "      <td>13634.460784</td>\n",
-       "      <td>27419.995098</td>\n",
-       "      <td>0.586520</td>\n",
-       "      <td>27134.950980</td>\n",
-       "      <td>23812.240196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>4.911031</td>\n",
-       "      <td>12708.029523</td>\n",
-       "      <td>9763.175556</td>\n",
-       "      <td>0.299099</td>\n",
-       "      <td>10475.566313</td>\n",
-       "      <td>9439.780638</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>2002.000000</td>\n",
-       "      <td>2585.000000</td>\n",
-       "      <td>9881.000000</td>\n",
-       "      <td>0.043600</td>\n",
-       "      <td>5100.000000</td>\n",
-       "      <td>4406.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2006.000000</td>\n",
-       "      <td>6126.750000</td>\n",
-       "      <td>19792.750000</td>\n",
-       "      <td>0.240250</td>\n",
-       "      <td>20728.250000</td>\n",
-       "      <td>18831.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>2010.000000</td>\n",
-       "      <td>9396.000000</td>\n",
-       "      <td>26262.500000</td>\n",
-       "      <td>0.753600</td>\n",
-       "      <td>28198.500000</td>\n",
-       "      <td>24356.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>2014.000000</td>\n",
-       "      <td>12483.250000</td>\n",
-       "      <td>34260.000000</td>\n",
-       "      <td>0.829825</td>\n",
-       "      <td>31824.250000</td>\n",
-       "      <td>27946.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>2018.000000</td>\n",
-       "      <td>56225.000000</td>\n",
-       "      <td>56225.000000</td>\n",
-       "      <td>0.927700</td>\n",
-       "      <td>65501.000000</td>\n",
-       "      <td>59183.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Year  In_state_tuition  Out_of_state_tuition  \\\n",
-       "count   204.000000        204.000000            204.000000   \n",
-       "mean   2010.000000      13634.460784          27419.995098   \n",
-       "std       4.911031      12708.029523           9763.175556   \n",
-       "min    2002.000000       2585.000000           9881.000000   \n",
-       "25%    2006.000000       6126.750000          19792.750000   \n",
-       "50%    2010.000000       9396.000000          26262.500000   \n",
-       "75%    2014.000000      12483.250000          34260.000000   \n",
-       "max    2018.000000      56225.000000          56225.000000   \n",
-       "\n",
-       "       Admissions_rate_overall    Enrollment  Student Size  \n",
-       "count               204.000000    204.000000    204.000000  \n",
-       "mean                  0.586520  27134.950980  23812.240196  \n",
-       "std                   0.299099  10475.566313   9439.780638  \n",
-       "min                   0.043600   5100.000000   4406.000000  \n",
-       "25%                   0.240250  20728.250000  18831.500000  \n",
-       "50%                   0.753600  28198.500000  24356.000000  \n",
-       "75%                   0.829825  31824.250000  27946.250000  \n",
-       "max                   0.927700  65501.000000  59183.000000  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "college_df = pd.read_csv(\"college_data.csv\", encoding=\"utf-8\")\n",
+    "college_df\n",
     "\n",
-    "college_df.describe()\n",
+    "college_df\n",
     "\n"
    ]
   },
@@ -887,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +864,7 @@
        "4             46055             13301             5585              7716  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1247,7 @@
        "193            -0.037793            -0.436848  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1652,7 @@
        "193            -0.037793            -0.436848                       -3243  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
